Bug 149042 - [New Block-Inside-Inline Model] Self-collapsing block check needs to account for anonymous inline blocks
Summary: [New Block-Inside-Inline Model] Self-collapsing block check needs to account ...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Dave Hyatt
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-09-10 13:09 PDT by Dave Hyatt
Modified: 2015-09-10 15:16 PDT (History)
7 users (show)

See Also:


Attachments
Patch (11.49 KB, patch)
2015-09-10 13:14 PDT, Dave Hyatt
dino: review+
buildbot: commit-queue-
Details | Formatted Diff | Diff
Archive of layout-test-results from ews106 for mac-mavericks-wk2 (889.53 KB, application/zip)
2015-09-10 13:42 PDT, Build Bot
no flags Details
Archive of layout-test-results from ews103 for mac-mavericks (733.00 KB, application/zip)
2015-09-10 13:57 PDT, Build Bot
no flags Details
Patch (11.62 KB, patch)
2015-09-10 14:44 PDT, Dave Hyatt
dino: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Dave Hyatt 2015-09-10 13:09:42 PDT
Self-collapsing block check needs to account for anonymous inline blocks. For example:

<div><i><div></div></i></div>

is still self-collapsing even though it has a "line box" with an anonymous inline block on it.
Comment 1 Dave Hyatt 2015-09-10 13:14:48 PDT
Created attachment 260946 [details]
Patch
Comment 2 WebKit Commit Bot 2015-09-10 13:18:11 PDT
Attachment 260946 [details] did not pass style-queue:


ERROR: Source/WebCore/rendering/RenderBlockFlow.cpp:952:  Should have only a single space after a punctuation in a comment.  [whitespace/comments] [5]
ERROR: Source/WebCore/ChangeLog:10:  Need whitespace between colon and description  [changelog/filechangedescriptionwhitespace] [5]
Total errors found: 2 in 12 files


If any of these errors are false positives, please file a bug against check-webkit-style.
Comment 3 Build Bot 2015-09-10 13:42:32 PDT
Comment on attachment 260946 [details]
Patch

Attachment 260946 [details] did not pass mac-wk2-ews (mac-wk2):
Output: http://webkit-queues.webkit.org/results/158126

New failing tests:
fast/text/zero-font-size.html
Comment 4 Build Bot 2015-09-10 13:42:36 PDT
Created attachment 260947 [details]
Archive of layout-test-results from ews106 for mac-mavericks-wk2

The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews.
Bot: ews106  Port: mac-mavericks-wk2  Platform: Mac OS X 10.9.5
Comment 5 Build Bot 2015-09-10 13:57:18 PDT
Comment on attachment 260946 [details]
Patch

Attachment 260946 [details] did not pass mac-ews (mac):
Output: http://webkit-queues.webkit.org/results/158155

New failing tests:
fast/text/zero-font-size.html
Comment 6 Build Bot 2015-09-10 13:57:21 PDT
Created attachment 260953 [details]
Archive of layout-test-results from ews103 for mac-mavericks

The attached test failures were seen while running run-webkit-tests on the mac-ews.
Bot: ews103  Port: mac-mavericks  Platform: Mac OS X 10.9.5
Comment 7 Dave Hyatt 2015-09-10 14:44:15 PDT
Created attachment 260956 [details]
Patch
Comment 8 Dave Hyatt 2015-09-10 15:16:18 PDT
Fixed in r189594.