[New Block-Inside-Inline Model] Self-collapsing block check needs to account for anonymous inline blocks https://bugs.webkit.org/show_bug.cgi?id=149042

Reviewed by Dean Jackson.

Source/WebCore:

Added new tests in fast/block/inside-inlines/

* rendering/InlineFlowBox.cpp:
* rendering/InlineFlowBox.h:
(WebCore::InlineFlowBox::anonymousInlineBlock):
Add a new accessor to get the anonymousInlineBlock() for lines that wrap them.

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::childrenPreventSelfCollapsing):
(WebCore::RenderBlock::isSelfCollapsingBlock):
isSelfCollapsingBlock() now calls a virtual method that checks lines/children called childrenPreventSelfCollapsing.
This lets us farm out the lines check to the derived RenderBlockFlow class.

* rendering/RenderBlock.h:
(WebCore::RenderBlock::childrenPreventSelfCollapsing):
Added new virtual method for checking children.

* rendering/RenderBlockFlow.cpp:
* rendering/RenderBlockFlow.h:
(WebCore::RenderBlockFlow::childrenPreventSelfCollapsing):
Overridden to ensure that blocks can still be self-collapsing if they only contain anonymous inline-block lines that
are also self-collapsing.

LayoutTests:

* fast/block/inside-inlines/new-model/self-collapsing-test-expected.html: Added.
* fast/block/inside-inlines/new-model/self-collapsing-test.html: Added.
* fast/block/inside-inlines/self-collapsing-test-expected.html: Added.
* fast/block/inside-inlines/self-collapsing-test.html: Added.



Canonical link: https://commits.webkit.org/167146@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189594 268f45cc-cd09-0410-ab3c-d52691b4dbfc