Source/WebCore/rendering/InlineFlowBox.h
@@ -214,7 +214,8 @@ public:
     
     bool hasAnonymousInlineBlock() const { return m_hasAnonymousInlineBlock; }
     void setHasAnonymousInlineBlock(bool b) { m_hasAnonymousInlineBlock = b; }
-
+    RenderBlockFlow* anonymousInlineBlock() const;
+    
     void checkConsistency() const;
     void setHasBadChildList();
 
